--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>All Campgrounds</title>
-    </head>
-    <body>
-        <ul>
-            <% for (let campground of allCampgrounds) { %>
-            <li>
-                <a href="campgrounds/<%= campground.id %>"><%= campground.title %></a>
-            </li>
-            <% } %>
-        </ul>
-    </body>
-</html>
+<% layout('layouts/boilerplate') %>
+<h1>All Campgrounds</h1>
+<ul>
+    <% for (let campground of allCampgrounds) { %>
+    <li>
+        <a href="campgrounds/<%= campground.id %>"><%= campground.title %></a>
+    </li>
+    <% } %>
+</ul>
