modified the styles in the views with boostrap and ejs-mate

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -15,7 +15,7 @@
         <!-------------------- Partial: Navbar ------------------->
         <%- include('../partials/navbar') %>
         <!-------------------- BODY ------------------->
-        <main><%- body %></main>
+        <main class="container my-2"><%- body %></main>
         <!-------------------- Partial: Footer ------------------->
         <%- include('../partials/footer') %>
         <!-- Bootstrap Setup -->
