--- a/views/campgrounds/addNew.ejs
+++ b/views/campgrounds/addNew.ejs
@@ -1,14 +1,58 @@
 <% layout('layouts/boilerplate') %>
 
-<!-- define a form to allow user to add new campground -->
-<form action="/campgrounds" method="POST">
-    <div>
-        <label for="title">Title</label>
-        <input type="text" id="title" name="campground[title]" />
+<div class="row">
+    <h3 class="text-center mt-3">Add New Campground</h3>
+    <!-- Make the form centered -->
+    <div class="col-6 offset-3">
+        <!-- define a form to allow user to add new campground -->
+        <form action="/campgrounds" method="POST">
+            <div class="mb-3">
+                <label class="form-label" for="title">Title</label>
+                <input
+                    class="form-control"
+                    type="text"
+                    id="title"
+                    name="campground[title]" />
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="location">Location</label>
+                <input
+                    class="form-control"
+                    type="text"
+                    id="location"
+                    name="campground[location]" />
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="image">Image Url</label>
+                <input
+                    class="form-control"
+                    type="text"
+                    id="image"
+                    name="campground[image]" />
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="description">Description</label>
+                <textarea
+                    class="form-control"
+                    type="text"
+                    id="description"
+                    name="campground[description]"></textarea>
+            </div>
+            <div class="mt-3">
+                <label class="form-label" for="price">Price</label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">$</span>
+                    <input
+                        type="text"
+                        class="form-control"
+                        placeholder="0.00"
+                        aria-label="Amount (to the nearest dollar)" />
+                </div>
+            </div>
+
+            <div class="mt-4">
+                <button class="btn btn-success">Add Campground</button>
+            </div>
+        </form>
     </div>
-    <div>
-        <label for="location">Location</label>
-        <input type="text" id="location" name="campground[location]" />
-    </div>
-    <button>Add Campground</button>
-</form>
+</div>
