--- a/views/campgrounds/detail.ejs
+++ b/views/campgrounds/detail.ejs
@@ -1,12 +1,34 @@
 <% layout('layouts/boilerplate') %>
-<h1><%= tarCampground.title %></h1>
-<%= tarCampground.location %>
-<p>
-    <a href="/campgrounds/<%= tarCampground._id%>/edit">Edit</a>
-</p>
-<form action="/campgrounds/<%= tarCampground._id %>?_method=DELETE" method="POST">
-    <button type="submit">Delete</button>
-</form>
-<p>
-    <a href="/campgrounds">Back to All Campgrounds</a>
-</p>
+<div class="row">
+    <div class="col-6 offset-3">
+        <div class="card mb-3">
+            <img src="<%= tarCampground.image%>" class="card-img-top" alt="..." />
+            <div class="card-body">
+                <h5 class="card-title"><%= tarCampground.title%></h5>
+                <p class="card-text"><%= tarCampground.description%></p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item text-muted">
+                    Location: <%= tarCampground.location%>
+                </li>
+                <li class="list-group-item text-muted">
+                    Price: $<%= tarCampground.price%>/night
+                </li>
+            </ul>
+            <div class="card-body">
+                <a
+                    class="card-link btn btn-info"
+                    href="/campgrounds/<%=tarCampground._id%>/edit">
+                    Edit
+                </a>
+                <form
+                    class="d-inline"
+                    action="/campgrounds/<%=tarCampground._id%>?_method=DELETE"
+                    method="POST">
+                    <button class="btn btn-danger">Delete</button>
+                </form>
+            </div>
+            <div class="card-footer text-muted">2 days ago</div>
+        </div>
+    </div>
+</div>
