--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,24 +1,67 @@
 <% layout('layouts/boilerplate') %>
 
 <!-- define a form to allow user to add new campground -->
-<form action="/campgrounds/<%= tarCampground._id %>?_method=PUT" method="POST">
-    <div>
-        <label for="title">Title</label>
-        <input
-            type="text"
-            id="title"
-            name="campground[title]"
-            value="<%= tarCampground.title %>" />
+
+<div class="row">
+    <h3 class="text-center mt-3">Add New Campground</h3>
+    <!-- Make the form centered -->
+    <div class="col-6 offset-3">
+        <!-- define a form to allow user to add new campground -->
+        <form action="/campgrounds/<%= tarCampground._id %>?_method=PUT" method="POST">
+            <div class="mb-3">
+                <label class="form-label" for="title">Title</label>
+                <input
+                    class="form-control"
+                    type="text"
+                    id="title"
+                    name="campground[title]"
+                    value="<%= tarCampground.title %>" />
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="location">Location</label>
+                <input
+                    class="form-control"
+                    type="text"
+                    id="location"
+                    name="campground[location]"
+                    value="<%= tarCampground.location %>" />
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="image">Image Url</label>
+                <input
+                    class="form-control"
+                    type="text"
+                    id="image"
+                    name="campground[image]"
+                    value="<%= tarCampground.image %>" />
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="description">Description</label>
+                <textarea
+                    class="form-control"
+                    type="text"
+                    id="description"
+                    name="campground[description]"
+                    placeholder="<%= tarCampground.description %>"></textarea>
+            </div>
+            <div class="mt-3">
+                <label class="form-label" for="price">Price</label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">$</span>
+                    <input
+                        type="text"
+                        class="form-control"
+                        placeholder="0.00"
+                        aria-label="Amount (to the nearest dollar)"
+                        value="<%= tarCampground.price %>" />
+                </div>
+            </div>
+
+            <div class="mt-4">
+                <button class="btn btn-success">Save</button>
+            </div>
+        </form>
+        <!-- add a link to back to the detail page -->
+        <a href="/campgrounds/<%= tarCampground._id %>">Back</a>
     </div>
-    <div>
-        <label for="location">Location</label>
-        <input
-            type="text"
-            id="location"
-            name="campground[location]"
-            value="<%= tarCampground.location %>" />
-    </div>
-    <button>Save</button>
-</form>
-<!-- add a link to back to the detail page -->
-<a href="/campgrounds/<%= tarCampground._id %>">Back</a>
+</div>
