--- a/views/campgrounds/addNew.ejs
+++ b/views/campgrounds/addNew.ejs
@@ -5,14 +5,17 @@
     <!-- Make the form centered -->
     <div class="col-6 offset-3">
         <!-- define a form to allow user to add new campground -->
-        <form action="/campgrounds" method="POST">
+        <form action="/campgrounds" method="POST" novalidate class="needs-validation">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input
                     class="form-control"
                     type="text"
                     id="title"
-                    name="campground[title]" />
+                    name="campground[title]"
+                    required />
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please provide a title.</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
@@ -20,7 +23,10 @@
                     class="form-control"
                     type="text"
                     id="location"
-                    name="campground[location]" />
+                    name="campground[location]"
+                    required />
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please provide a location.</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image">Image Url</label>
@@ -28,7 +34,10 @@
                     class="form-control"
                     type="text"
                     id="image"
-                    name="campground[image]" />
+                    name="campground[image]"
+                    required />
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please provide an image.</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
@@ -36,7 +45,10 @@
                     class="form-control"
                     type="text"
                     id="description"
-                    name="campground[description]"></textarea>
+                    name="campground[description]"
+                    required></textarea>
+                <div class="valid-feedback">Looks good!</div>
+                <div class="invalid-feedback">Please provide a description.</div>
             </div>
             <div class="mt-3">
                 <label class="form-label" for="price">Price</label>
@@ -46,7 +58,10 @@
                         type="text"
                         class="form-control"
                         placeholder="0.00"
-                        aria-label="Amount (to the nearest dollar)" />
+                        aria-label="Amount (to the nearest dollar)"
+                        required />
+                    <div class="valid-feedback">Looks good!</div>
+                    <div class="invalid-feedback">Please provide a price.</div>
                 </div>
             </div>
 
