--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -7,7 +7,11 @@
     <!-- Make the form centered -->
     <div class="col-6 offset-3">
         <!-- define a form to allow user to add new campground -->
-        <form action="/campgrounds/<%= tarCampground._id %>?_method=PUT" method="POST">
+        <form
+            action="/campgrounds/<%= tarCampground._id %>?_method=PUT"
+            method="POST"
+            novalidate
+            class="needs-validation">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input
@@ -15,7 +19,9 @@
                     type="text"
                     id="title"
                     name="campground[title]"
-                    value="<%= tarCampground.title %>" />
+                    value="<%= tarCampground.title %>"
+                    required />
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
@@ -24,7 +30,9 @@
                     type="text"
                     id="location"
                     name="campground[location]"
-                    value="<%= tarCampground.location %>" />
+                    value="<%= tarCampground.location %>"
+                    required />
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="image">Image Url</label>
@@ -33,7 +41,9 @@
                     type="text"
                     id="image"
                     name="campground[image]"
-                    value="<%= tarCampground.image %>" />
+                    value="<%= tarCampground.image %>"
+                    required />
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
@@ -42,7 +52,9 @@
                     type="text"
                     id="description"
                     name="campground[description]"
-                    placeholder="<%= tarCampground.description %>"></textarea>
+                    placeholder="<%= tarCampground.description %>"
+                    required></textarea>
+                <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mt-3">
                 <label class="form-label" for="price">Price</label>
@@ -53,7 +65,9 @@
                         class="form-control"
                         placeholder="0.00"
                         aria-label="Amount (to the nearest dollar)"
-                        value="<%= tarCampground.price %>" />
+                        value="<%= tarCampground.price %>"
+                        required />
+                    <div class="valid-feedback">Looks good!</div>
                 </div>
             </div>
 
