defined utils including the error handling class and async wrapper and embeded inside app.js to handle different errors

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -64,6 +64,7 @@
                         type="text"
                         class="form-control"
                         placeholder="0.00"
+                        name="campground[price]"
                         aria-label="Amount (to the nearest dollar)"
                         value="<%= tarCampground.price %>"
                         required />
