--- a/views/campgrounds/addNew.ejs
+++ b/views/campgrounds/addNew.ejs
@@ -56,6 +56,7 @@
                     <span class="input-group-text">$</span>
                     <input
                         type="text"
+                        name="campground[price]"
                         class="form-control"
                         placeholder="0.00"
                         aria-label="Amount (to the nearest dollar)"
