--- a/views/campgrounds/detail.ejs
+++ b/views/campgrounds/detail.ejs
@@ -1,6 +1,7 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
-    <div class="col-6 offset-3">
+    <!-- Campground Information -->
+    <div class="col-6">
         <div class="card mb-3">
             <img src="<%= tarCampground.image%>" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -30,5 +31,51 @@
             </div>
             <div class="card-footer text-muted">2 days ago</div>
         </div>
+    </div>
+    <div class="col-6">
+        <!-- Review Section -->
+        <!-- Add a new Review -->
+        <form
+            action="/campgrounds/<%= tarCampground._id %>/reviews"
+            method="POST"
+            class="my-3 needs-validation px-2"
+            novalidate>
+            <h3>Leave a Review</h3>
+            <div class="mb-3">
+                <label class="form-label" for="rating">Rating</label>
+                <input
+                    class="form-range"
+                    type="range"
+                    min="1"
+                    max="5"
+                    name="review[rating]"
+                    id="rating" />
+            </div>
+            <div class="mb-3">
+                <label for="body" class="form-label">Review</label>
+                <textarea
+                    class="form-control"
+                    id="body"
+                    rows="3"
+                    name="review[body]"
+                    required></textarea>
+                <div class="valid-feedback">Looks good!</div>
+            </div>
+            <button class="btn btn-success">Submit</button>
+        </form>
+        <!-- Display all the reviews -->
+        <% for(let review of tarCampground.reviews) { %>
+        <div class="card mb-3 ">
+            <div class="card-body">
+                <h5 class="card-title">Rating: <%= review.rating %></h5>
+                <p class="card-text">Review: <%= review.body %></p>
+                <form
+                    action="/campgrounds/<%=tarCampground._id%>/reviews/<%=review._id%>?_method=DELETE"
+                    method="POST">
+                    <button class="btn btn-sm btn-danger">Delete</button>
+                </form>
+            </div>
+        </div>
+        <% } %>
     </div>
 </div>
