--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -17,6 +17,14 @@
                 <a class="nav-link" href="/campgrounds">All Campgrounds</a>
                 <a class="nav-link" href="/campgrounds/new">New Campground</a>
             </div>
+            <div class="navbar-nav ms-auto">
+                <% if (!currentUser) { %>
+                <a class="nav-link" href="/login">Log in</a>
+                <a class="nav-link" href="/register">Register</a>
+                <% } else { %>
+                <a class="nav-link" href="/logout">Log out</a>
+                <% } %>
+            </div>
         </div>
     </div>
 </nav>
