--- a/views/campgrounds/detail.ejs
+++ b/views/campgrounds/detail.ejs
@@ -1,4 +1,6 @@
 <% layout('layouts/boilerplate') %>
+<link rel="stylesheet" type="text/css" href="/stylesheets/stars.css" />
+
 <div class="row">
     <!-- Campground Information -->
     <div class="col-6">
@@ -47,16 +49,49 @@
             method="POST"
             class="my-3 needs-validation px-2"
             novalidate>
-            <h3>Leave a Review</h3>
+            <h3 class="bold-bold">Leave a Review</h3>
             <div class="mb-3">
-                <label class="form-label" for="rating">Rating</label>
-                <input
-                    class="form-range"
-                    type="range"
-                    min="1"
-                    max="5"
-                    name="review[rating]"
-                    id="rating" />
+                <fieldset class="starability-slot">
+                    <legend>First rating:</legend>
+                    <input
+                        type="radio"
+                        id="no-rate"
+                        class="input-no-rate"
+                        name="review[rating]"
+                        value="1"
+                        checked
+                        aria-label="No rating." />
+                    <input
+                        type="radio"
+                        id="first-rate1"
+                        name="review[rating]"
+                        value="1" />
+                    <label for="first-rate1" title="Terrible">1 star</label>
+                    <input
+                        type="radio"
+                        id="first-rate2"
+                        name="review[rating]"
+                        value="2" />
+                    <label for="first-rate2" title="Not good">2 stars</label>
+                    <input
+                        type="radio"
+                        id="first-rate3"
+                        name="review[rating]"
+                        value="3" />
+                    <label for="first-rate3" title="Average">3 stars</label>
+                    <input
+                        type="radio"
+                        id="first-rate4"
+                        name="review[rating]"
+                        value="4" />
+                    <label for="first-rate4" title="Very good">4 stars</label>
+                    <input
+                        type="radio"
+                        id="first-rate5"
+                        name="review[rating]"
+                        value="5" />
+                    <label for="first-rate5" title="Amazing">5 stars</label>
+                </fieldset>
             </div>
             <div class="mb-3">
                 <label for="body" class="form-label">Review</label>
@@ -75,11 +110,17 @@
         <% for(let review of tarCampground.reviews) { %>
         <div class="card mb-3 ">
             <div class="card-body">
-                <h5 class="card-title">Rating: <%= review.rating %></h5>
-                <h6 class="card-subtitle mb-2 text-muted">
-                    By <%= review.author.username%>
-                </h6>
+                <h6 class="card-title"><%= review.author.username%></h6>
+                <p class="starability-result" data-rating="<%=review.rating%>"></p>
+                <!-- <p class="starability-result" data-rating="3">Rated: 3 stars</p> -->
+
                 <p class="card-text">Review: <%= review.body %></p>
+                <p class="text-muted">
+                    <%= new Date(review.createdAt).toLocaleString('default', { month:
+                    'long' }) %> <%= new Date(review.createdAt).getDate() %>, <%= new
+                    Date(review.createdAt).getFullYear() %>
+                </p>
+
                 <% if( currentUser && review.author.equals(currentUser._id)) {%>
                 <form
                     action="/campgrounds/<%=tarCampground._id%>/reviews/<%=review._id%>?_method=DELETE"
