--- a/views/campgrounds/detail.ejs
+++ b/views/campgrounds/detail.ejs
@@ -5,8 +5,42 @@
     <!-- Campground Information -->
     <div class="col-6">
         <div class="card mb-3">
-            <img src="<%= tarCampground.image%>" class="card-img-top" alt="..." />
             <div class="card-body">
+                <div
+                    id="campgroundCarousel"
+                    class="carousel slide"
+                    data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <% tarCampground.images.forEach((img, i) => { %>
+                        <div class="carousel-item <%= i === 0 ? 'active' : ''%> ">
+                            <img
+                                src="<%= img.url%>"
+                                class="card-img-top d-block w-100"
+                                alt="campsite image" />
+                        </div>
+                        <% }) %>
+                    </div>
+                    <% if (tarCampground.images.length > 1) { %>
+                    <button
+                        class="carousel-control-prev"
+                        type="button"
+                        data-bs-target="#campgroundCarousel"
+                        data-bs-slide="prev">
+                        <span
+                            class="carousel-control-prev-icon"
+                            aria-hidden="true"></span>
+                    </button>
+                    <button
+                        class="carousel-control-next"
+                        type="button"
+                        data-bs-target="#campgroundCarousel"
+                        data-bs-slide="next">
+                        <span
+                            class="carousel-control-next-icon"
+                            aria-hidden="true"></span>
+                    </button>
+                    <% } %>
+                </div>
                 <h5 class="card-title"><%= tarCampground.title%></h5>
                 <p class="card-text"><%= tarCampground.description%></p>
             </div>
