--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,7 +3,7 @@
 <!-- define a form to allow user to add new campground -->
 
 <div class="row">
-    <h3 class="text-center mt-3">Add New Campground</h3>
+    <h3 class="text-center mt-3">Edit Campground</h3>
     <!-- Make the form centered -->
     <div class="col-6 offset-3">
         <!-- define a form to allow user to add new campground -->
@@ -11,7 +11,8 @@
             action="/campgrounds/<%= tarCampground._id %>?_method=PUT"
             method="POST"
             novalidate
-            class="needs-validation">
+            class="needs-validation"
+            enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input
@@ -34,17 +35,7 @@
                     required />
                 <div class="valid-feedback">Looks good!</div>
             </div>
-            <div class="mb-3">
-                <label class="form-label" for="image">Image Url</label>
-                <input
-                    class="form-control"
-                    type="text"
-                    id="image"
-                    name="campground[image]"
-                    value="<%= tarCampground.image %>"
-                    required />
-                <div class="valid-feedback">Looks good!</div>
-            </div>
+
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
                 <textarea
@@ -52,8 +43,9 @@
                     type="text"
                     id="description"
                     name="campground[description]"
-                    placeholder="<%= tarCampground.description %>"
-                    required></textarea>
+                    required>
+<%= tarCampground.description%></textarea
+                >
                 <div class="valid-feedback">Looks good!</div>
             </div>
             <div class="mt-3">
@@ -71,7 +63,29 @@
                     <div class="valid-feedback">Looks good!</div>
                 </div>
             </div>
-
+            <div class="mb-3">
+                <label class="form-label" for="image">Add Image</label>
+                <input
+                    class="form-control"
+                    type="file"
+                    id="image"
+                    name="image"
+                    multiple />
+                <div class="valid-feedback">Looks good!</div>
+            </div>
+            <div class="mb-3">
+                <% tarCampground.images.forEach(function(img, i) { %>
+                <img src="<%=img.url %>" class="img-thumbnail" alt="" />
+                <div class="form-check-inline">
+                    <input
+                        type="checkbox"
+                        id="image-<%=i%>"
+                        name="deleteImages[]"
+                        value="<%=img.fileName%>" />
+                </div>
+                <label for="image-<%=i%>">Delete?</label>
+                <% })%>
+            </div>
             <div class="mt-4">
                 <button class="btn btn-success">Save</button>
             </div>
